--- a/jatekleiras.html
+++ b/jatekleiras.html
@@ -41,23 +41,23 @@
       <p>Játékmenet</p>
     </div>
     <div class="leiras">
-      <ul>
+      <ol>
         <li>
-          1. A játékosok kapnak egy listát, mely a szövegből hiányzó szavak
+          A játékosok kapnak egy listát, mely a szövegből hiányzó szavak
           szófajait tartalmazza.
         </li>
         <li>
-          2. A játékosok kitalálnak szavakat, amelyek megfelelnek a szófajoknak.
+          A játékosok kitalálnak szavakat, amelyek megfelelnek a szófajoknak.
         </li>
         <li>
-          3. A számítógép beilleszti a szavakat a szövegbe, ezzel egy humoros
+          A számítógép beilleszti a szavakat a szövegbe, ezzel egy humoros
           szöveget alkotva.
         </li>
         <li>
-          4. A játékosok megkapják a szöveget, mely remélhetőleg sikeresen
+          A játékosok megkapják a szöveget, mely remélhetőleg sikeresen
           megnevetteti őket.
         </li>
-      </ul>
+      </ol>
     </div>
     <script src="navbar.js"></script>
   </body>
