--- a/jatekleiras.html
+++ b/jatekleiras.html
@@ -1,64 +1,102 @@
 <!DOCTYPE html>
-<html lang="hu">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="navbar.css" />
-    <link rel="stylesheet" href="jatekleiras.css" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+   
+    <link rel="stylesheet" href="./css/jatekleiras.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css">
+    <link rel="shortcut icon" href="képek/madlibs.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Játékleírás</title>
-  </head>
-
-  <body>
-    <div class="topnav" id="myTopnav">
-      <a class="logo" href="index.html"
-        ><img
-          class="nav-pic"
-          src="kepek/madlibs.png"
-          width="150px"
-          float="right"
-      /></a>
-      <a href="index.html">Játék</a>
-      <a href="jatekleiras.html" class="active">Játékleírás</a>
-      <a href="beallitasok.html">Beállítások</a>
-      <a href="nevjegy.html">Névjegy</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
+</head>
+<body>
+    <div id="cont2">
+        <!-- Navigácio -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">Játékleírás</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a class="nav-link" href="index.html">Kezdőlap</a></li>
+              <li class="nav-item"><a class="nav-link active" href="jatekleiras.html">Játékleírás</a></li>
+              <li class="nav-item"><a class="nav-link" href="nevjegy.html">Névjegy</a></li>
+              <button onclick="applyTheme('')" class="theme-button-light">gf</button>
+              <button onclick="applyTheme('dark')" class="theme-button-dark">gf</button>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="title">
+        <p>Játékleírás</p>
+      </div>
+      <div class="leiras">
+        <p class="listitems">
+          A Mad Libs (szójáték az ad lib-el) egy szójáték, amelyben a játékosoknak
+          előre megadott szófajű szavakat kell kitalálniuk, amelyeket aztán egy
+          általuk nem ismert szövegbe kell beilleszteni, ez által furcsábbnál
+          furcsább sztorikat kreálva.
+        </p>
+      </div>
+      <div class="title">
+        <p>Játékmenet</p>
+      </div>
+      <div class="leiras">
+        <ol>
+          <li class="listitems">
+            A játékosoknak ki kell választani a nyelvet, amelyen játszani szeretnének.
+          </li>
+          <li class="listitems">
+            A játékosoknak ki kell választani azt a történetet, ameylnek a címe a legjobban felkeltette érdeklődésüket.
+          </li>
+          <li class="listitems">
+            A játékosok kapnak egy listát, mely a szövegből hiányzó szavak
+            szófajait tartalmazza.
+          </li>
+          <li class="listitems">
+            A játékosok kitalálnak szavakat, amelyek megfelelnek a szófajoknak.
+          </li>
+          <li class="listitems">
+            A számítógép beilleszti a szavakat a szövegbe, ezzel egy humoros
+            szöveget alkotva.
+          </li>
+          <li class="listitems">
+            A játékosok megkapják a szöveget, mely remélhetőleg sikeresen
+            megnevetteti őket.
+          </li>
+        </ol>
+      </div>
     </div>
-    <div class="title">
-      <p>Játékleírás</p>
-    </div>
-    <div class="leiras">
-      <p>
-        A Mad Libs (szójáték az ad lib-el) egy szójáték, amelyben a játékosoknak
-        előre megadott szófajű szavakat kell kitalálniuk, amelyeket aztán egy
-        általuk nem ismert szövegbe kell beilleszteni, ez által furcsábbnál
-        furcsább sztorikat kreálva.
-      </p>
-    </div>
-    <div class="title">
-      <p>Játékmenet</p>
-    </div>
-    <div class="leiras">
-      <ol>
-        <li>
-          A játékosok kapnak egy listát, mely a szövegből hiányzó szavak
-          szófajait tartalmazza.
-        </li>
-        <li>
-          A játékosok kitalálnak szavakat, amelyek megfelelnek a szófajoknak.
-        </li>
-        <li>
-          A számítógép beilleszti a szavakat a szövegbe, ezzel egy humoros
-          szöveget alkotva.
-        </li>
-        <li>
-          A játékosok megkapják a szöveget, mely remélhetőleg sikeresen
-          megnevetteti őket.
-        </li>
-      </ol>
-    </div>
-    <script src="navbar.js"></script>
-  </body>
+    <script src="javascript/jquery-3.3.1.min.js"></script>
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
+    <script>
+      function applyTheme(theme) {
+          var body = document.getElementsByTagName('body')[0];
+          body.className = theme;
+          
+          // Save the selected theme to local storage
+          localStorage.setItem('theme', theme);
+      }
+      
+      // Check if a theme is already set in local storage
+      var savedTheme = localStorage.getItem('theme');
+      if (savedTheme) {
+          applyTheme(savedTheme);
+      }
+      </script>
+</body>
 </html>
